--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -14,7 +14,7 @@
 body {
   font-family: $font-primary;
   color: $color-nones;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -41,10 +41,6 @@ section {
   padding: 80px 0;
 }
 
-.section-bg {
-  background-color: #eee;
-  background-image: url(/images/);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+main {
+  height: 90dvh;
 }
