--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9813,7 +9813,7 @@ textarea.form-control-lg {
 body {
   font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   color: #212529;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
@@ -9845,12 +9845,8 @@ section {
   padding: 80px 0;
 }
 
-.section-bg {
-  background-color: #eee;
-  background-image: url(/images/);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+main {
+  height: 90dvh;
 }
 
 .navbar-container {
@@ -9858,6 +9854,7 @@ section {
   background: transparent;
   z-index: 999;
   border-bottom: 1px solid #dedede;
+  height: 10dvh;
 }
 .navbar-container .navbar-toggler {
   border: 2px solid #0c6f84;
@@ -9879,6 +9876,12 @@ section {
 .navbar-container .navbar-collapse {
   margin: 5px 0px;
   border-radius: 10px;
+}
+@media (min-width: 768px) {
+  .navbar-container .navbar-collapse {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 @media (max-width: 767.98px) {
   .navbar-container .navbar-collapse {
@@ -9915,9 +9918,29 @@ section {
 @media (min-width: 768px) {
   .navbar-container .navbar-collapse li a:hover, .navbar-container .navbar-collapse li a:active, .navbar-container .navbar-collapse li a:focus {
     border-bottom: 2px solid #0c6f84;
-    animation: border-bottom 0.2s ease-in;
+    animation: border-bottom 0.5s ease-in;
     color: #0c6f84;
   }
+}
+.navbar-container .navbar-collapse li a.active {
+  font-weight: 600;
+}
+.navbar-container .navbar-collapse .btn-secondary {
+  margin-right: 30px;
+  background: #d30f0f;
+  border: none;
+  border-radius: 10px;
+  transition: background-color 0.5s ease, box-shadow 0.5s ease;
+}
+@media (max-width: 767.98px) {
+  .navbar-container .navbar-collapse .btn-secondary {
+    margin-bottom: 20px;
+    margin-right: 0px;
+  }
+}
+.navbar-container .navbar-collapse .btn-secondary:hover {
+  background-color: #0c6f84;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 .navbar-container .bi-x::before {
   content: "\e888";
@@ -9940,12 +9963,12 @@ section {
 }
 @media (max-width: 767.98px) {
   .hero .content {
-    width: 80%;
+    width: 85%;
   }
 }
 @media (max-width: 575.98px) {
   .hero .content {
-    width: 90%;
+    width: 100%;
   }
 }
 .hero .content .title {
@@ -9959,6 +9982,10 @@ section {
   .hero .content .title {
     font-size: 35px;
   }
+}
+.hero .content .text-content {
+  max-height: 380px;
+  overflow: hidden;
 }
 .hero .content .btn-primary {
   position: relative;
@@ -10103,6 +10130,203 @@ section {
   transform: scale(1.1) translateX(-20px);
 }
 
+.hasil-kuesioner {
+  height: 90dvh;
+  position: relative;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+}
+.hasil-kuesioner .content {
+  width: 80%;
+  z-index: 100;
+}
+@media (max-width: 767.98px) {
+  .hasil-kuesioner .content {
+    width: 90%;
+  }
+}
+@media (max-width: 575.98px) {
+  .hasil-kuesioner .content {
+    width: 100%;
+  }
+}
+.hasil-kuesioner .content .card {
+  height: 150px;
+  margin: 10px;
+  text-align: center;
+  border-radius: 15px;
+  background-color: #0c6f84;
+  color: #ffffff;
+  transition: transform 0.2s ease-in-out;
+}
+.hasil-kuesioner .content .card:hover, .hasil-kuesioner .content .card:focus {
+  transform: scale(1.1);
+}
+.hasil-kuesioner .content .card .card-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.hasil-kuesioner .content .card .card-body .purecounter {
+  font-size: 40px;
+  font-weight: bold;
+}
+.hasil-kuesioner .content .card .card-body .card-text {
+  font-size: 14px;
+}
+.hasil-kuesioner .card-slider {
+  overflow: hidden;
+  border-top-left-radius: 50%;
+  max-height: 400px;
+}
+.hasil-kuesioner .card-slider .glightbox .image-container {
+  position: absolute;
+  height: 100%;
+  top: 0px;
+  right: -100px;
+  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+  transform: scale(1.1);
+}
+@media (max-width: 991.98px) {
+  .hasil-kuesioner .card-slider .glightbox .image-container {
+    right: -150px;
+  }
+}
+@media (max-width: 767.98px) {
+  .hasil-kuesioner .card-slider .glightbox .image-container {
+    right: -200px;
+  }
+}
+@media (max-width: 575.98px) {
+  .hasil-kuesioner .card-slider .glightbox .image-container {
+    right: -350px;
+  }
+}
+.hasil-kuesioner .card-slider .glightbox .image-container:hover, .hasil-kuesioner .card-slider .glightbox .image-container:focus {
+  transform: scale(1.1) translateX(-20px);
+}
+
+.print {
+  min-height: 100dvh;
+  padding: 30px;
+}
+.print .content .title {
+  color: #0c6f84;
+  font-weight: 600;
+  margin: 30px auto;
+  font-size: 45px;
+  text-align: center;
+}
+@media (max-width: 575.98px) {
+  .print .content .title {
+    font-size: 25px;
+  }
+}
+.print .content .btn-primary {
+  background: #0c6f84;
+  padding: 10px 40px;
+  margin: 40px 20px 0 20px;
+  font-weight: bold;
+  font-size: 16px;
+  border: 3px solid #0c6f84;
+}
+.print .content .btn-primary:hover {
+  background: transparent;
+  border: 3px solid #0c6f84;
+  color: #0c6f84;
+}
+.print .content .btn-secondary {
+  font-weight: bold;
+  padding: 10px 40px;
+  margin: 40px 20px 0 20px;
+}
+.print .content .btn-secondary:hover {
+  background: #656565;
+}
+.print .content .table-responsive {
+  margin-top: 20px;
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+}
+.print .content .table-responsive input {
+  width: 400px;
+}
+@media (max-width: 575.98px) {
+  .print .content .table-responsive input {
+    width: 200px;
+  }
+}
+.print .content .table-responsive thead th {
+  text-align: center;
+  vertical-align: middle;
+}
+.print .content .table-responsive .table {
+  margin: 20px auto;
+}
+.print .content .table-responsive .results tr[visible=false],
+.print .content .table-responsive .no-result {
+  display: none;
+}
+.print .content .table-responsive .results tr[visible=true] {
+  display: table-row;
+}
+.print .content .table-responsive .counter {
+  padding: 8px;
+  color: #ccc;
+}
+
+.biodata input,
+.biodata select {
+  height: 45px;
+}
+.biodata textarea {
+  height: 90px;
+}
+.biodata input:-webkit-autofill,
+.biodata input:-webkit-autofill:hover,
+.biodata input:-webkit-autofill:focus,
+.biodata input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #add8e6 inset !important;
+}
+
+.terimakasih {
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.terimakasih .content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.terimakasih .content .title {
+  font-size: 40px;
+  font-weight: bold;
+  margin: 40px 0;
+}
+.terimakasih .content .subtitle {
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+.terimakasih .content .btn-primary {
+  background: #0c6f84;
+  padding: 10px 40px;
+  font-weight: bold;
+  font-size: 16px;
+  border: 3px solid #0c6f84;
+}
+.terimakasih .content .btn-primary:hover {
+  background: transparent;
+  border: 3px solid #0c6f84;
+  color: #0c6f84;
+}
+
 main {
   position: relative;
 }
@@ -10113,4 +10337,198 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.kuesioner {
+  background: #0c6f84;
+  min-height: 100dvh;
+}
+.kuesioner .progressbar .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.kuesioner .progressbar .progress-container {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 30px;
+  max-width: 100%;
+  width: 350px;
+  z-index: 99;
+}
+.kuesioner .progressbar .progress-container::before {
+  content: "";
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 100%;
+  z-index: -1;
+}
+.kuesioner .progressbar .progress {
+  background-color: #4682b4;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  height: 4px;
+  width: 0%;
+  z-index: -1;
+  transition: 0.4s ease;
+}
+.kuesioner .progressbar .circle {
+  background-color: #1f1f1f;
+  color: #e2e2e2;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid #ffffff;
+  transition: 0.4s ease;
+}
+.kuesioner .progressbar .circle.active {
+  border-color: #4682b4;
+}
+.kuesioner .progressbar .btn {
+  color: #fff;
+  font-weight: bold;
+  border-radius: 6px;
+  cursor: pointer;
+  font-family: inherit;
+  padding: 8px 30px;
+  margin: 5px;
+  font-size: 14px;
+}
+.kuesioner .progressbar .btn:active {
+  transform: scale(0.98);
+}
+.kuesioner .progressbar .btn:focus {
+  outline: 0;
+}
+.kuesioner .progressbar .btn:disabled {
+  background-color: #ffffff;
+  cursor: not-allowed;
+}
+.kuesioner .progressbar .btn-primary {
+  background: #0c6f84;
+  border: 3px solid #0c6f84;
+}
+.kuesioner .progressbar .btn-primary:hover {
+  background: transparent;
+  border: 3px solid #0c6f84;
+  color: #0c6f84;
+}
+.kuesioner .progressbar .btn-secondary {
+  background: #d30f0f;
+  border: 3px solid #d30f0f;
+}
+@media (max-width: 767.98px) {
+  .kuesioner .progressbar .btn-secondary {
+    margin-right: 0px;
+  }
+}
+.kuesioner .progressbar .btn-secondary:hover {
+  background-color: transparent;
+  color: #d30f0f;
+}
+.kuesioner .card {
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 20px;
+  font-size: 16px;
+  padding: 20px 40px;
+}
+.kuesioner .card .card-title {
+  font-weight: bold;
+  font-size: 36px;
+  margin: 15px 0;
+}
+.kuesioner .card .card-subtitle {
+  margin-bottom: 40px;
+}
+.kuesioner .card .question-container {
+  /* Tampilan default input range */
+  /* Tampilan input range yang sudah diisi */
+}
+.kuesioner .card .question-container .question-title {
+  font-size: 18px;
+  margin: 20px 0;
+}
+.kuesioner .card .question-container .question {
+  margin: 10px 0;
+  display: flex;
+}
+.kuesioner .card .question-container .question .question-text {
+  margin-left: 5px;
+}
+.kuesioner .card .question-container .answer {
+  font-style: italic;
+  margin: 20px 12px 40px 12px;
+}
+.kuesioner .card .question-container .answer span {
+  font-style: normal;
+  margin-left: 5px;
+  border-radius: 5px;
+  padding: 2px 10px;
+  border: 1px solid #212529;
+}
+.kuesioner .card .question-container input[type=range] {
+  -webkit-appearance: none;
+  margin-bottom: 40px;
+  margin-left: 10px;
+  width: 70%;
+  height: 8px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  margin-top: 10px;
+}
+@media (max-width: 575.98px) {
+  .kuesioner .card .question-container input[type=range] {
+    width: 100%;
+  }
+}
+.kuesioner .card .question-container input[type=range]::-webkit-slider-runnable-track {
+  width: 70%;
+  height: 8px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: #d3d3d3;
+  border-radius: 5px;
+}
+@media (max-width: 575.98px) {
+  .kuesioner .card .question-container input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+  }
+}
+.kuesioner .card .question-container input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid #020202;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #0c6f84;
+  cursor: pointer;
+  margin-top: -6px;
+}
+.kuesioner .card .question-container .bantuan {
+  margin-left: 10px;
+  display: flex;
+  align-items: space-between;
+  justify-content: space-between;
+  width: 70%;
+}
+@media (max-width: 575.98px) {
+  .kuesioner .card .question-container .bantuan {
+    width: 100%;
+  }
+}
+.kuesioner .card .finish {
+  margin: 30px 0 20px 0;
 }/*# sourceMappingURL=main.css.map */
