--- a/assets/styles/components/_print.scss
+++ b/assets/styles/components/_print.scss
@@ -61,6 +61,13 @@
         }
       }
 
+      tbody {
+        th,
+        td {
+          text-align: center;
+          vertical-align: middle;
+        }
+      }
       .table {
         margin: 20px auto;
       }
