--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -10604,4 +10604,8 @@ main {
 .kelola-pertanyaan .card .aksi {
   text-align: center;
   vertical-align: middle;
+}
+.kelola-pertanyaan .card thead th {
+  text-align: center;
+  vertical-align: middle;
 }/*# sourceMappingURL=main.css.map */
