--- a/assets/styles/pages/_kelola-pertanyaan.scss
+++ b/assets/styles/pages/_kelola-pertanyaan.scss
@@ -74,5 +74,12 @@
       text-align: center;
       vertical-align: middle;
     }
+
+    thead {
+      th {
+        text-align: center;
+        vertical-align: middle;
+      }
+    }
   }
 }
