--- a/assets/styles/components/_navbar.scss
+++ b/assets/styles/components/_navbar.scss
@@ -90,16 +90,17 @@
       background: $color-secondary;
       border: none;
       border-radius: 10px;
-      transition: background-color 0.5s ease, box-shadow 0.5s ease;
+      transition: transform 0.5s ease, box-shadow 0.5s ease;
 
       @include media-breakpoint-down(md) {
         margin-bottom: 20px;
         margin-right: 0px;
       }
 
-      &:hover {
-        background-color: $color-primary;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+      &:hover,
+      &:active {
+        transform: scale(1.05);
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       }
     }
   }
