--- a/assets/styles/pages/_kelola-pertanyaan.scss
+++ b/assets/styles/pages/_kelola-pertanyaan.scss
@@ -66,7 +66,7 @@
       transition: box-shadow 0.5s ease;
 
       &:hover {
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
       }
     }
 
@@ -78,6 +78,13 @@
     thead {
       th {
         text-align: center;
+        vertical-align: middle;
+      }
+    }
+
+    tbody {
+      th,
+      td {
         vertical-align: middle;
       }
     }
