fix bug: change glightbox href & rename slider-answer.js

--- a/assets/styles/components/_login.scss
+++ b/assets/styles/components/_login.scss
@@ -62,6 +62,7 @@
       margin-top: 20px;
       color: $color-primary;
       text-decoration: none;
+      padding: 0.375rem 0.2rem;
 
       &:hover {
         text-decoration: underline;
