--- a/assets/styles/components/_print.scss
+++ b/assets/styles/components/_print.scss
@@ -23,6 +23,11 @@
       font-size: 16px;
       border: 3px solid $color-primary;
 
+      @include media-breakpoint-down(sm) {
+        padding: 10px 30px;
+        margin: 40px 5px 0 5px;
+      }
+
       &:hover {
         background: transparent;
         border: 3px solid $color-primary;
@@ -34,6 +39,11 @@
       font-weight: bold;
       padding: 10px 40px;
       margin: 40px 20px 0 20px;
+
+      @include media-breakpoint-down(sm) {
+        padding: 10px 30px;
+        margin: 40px 5px 0 5px;
+      }
 
       &:hover {
         background: #656565;
