--- a/assets/styles/components/_navbar.scss
+++ b/assets/styles/components/_navbar.scss
@@ -40,6 +40,10 @@
       background-color: $color-background;
     }
 
+    .nav-link {
+      padding: 10px 5px;
+    }
+
     li {
       margin: 0px 10px;
       border-radius: 5px;
