--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -11,6 +11,7 @@
 @import "components/print";
 @import "components/biodata";
 @import "components/terimakasih";
+@import "components/hasil-pengujian";
 
 @import "pages/home";
 @import "pages/kuesioner";
