--- a/assets/styles/pages/_kuesioner.scss
+++ b/assets/styles/pages/_kuesioner.scss
@@ -139,6 +139,11 @@
       }
     }
 
+    #formPrev,
+    #formNext {
+      display: inline;
+    }
+
     .question-container {
       .question-title {
         font-size: 18px;
